--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </div>
 
 <script>
-const PASSWORDS = ["parth", "krushna", "yashraj","prashant","samruddhi","laxmi","grishma","shubham","vivek","roshani","soheet"];
+const PASSWORDS = ["parth" , "ashwini", "krushna", "yashraj","prashant","samruddhi","laxmi","grishma","shubham","vivek","roshani","soheet"];
 const pwdInput = document.getElementById('pwd');
 const pwdBtn = document.getElementById('pwdBtn');
 const pwdErr = document.getElementById('pwdErr');
@@ -136,7 +136,7 @@ continueBtn.onclick = () => {
 
 // --- Create grid ---
 function initGrid() {
-  const total = 30; // reduce count for smoother load
+  const total = 35; // reduce count for smoother load
   for (let i = 1; i <= total; i++) {
     const card = document.createElement('div');
     card.className = 'card';
